2000-05-17  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c: Fix some html formatting.

2000-05-16  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (filter_driver_run): Delete all processed
	messages.  This is probably going to slow it down a bit.
	(filter_driver_run): Close folders before destroying them *sigh*.
	(open_folder): Actually open the folder. Doh.

	* filtertypes.xml: Initial filter rules.

	* filter-xml.c (filter_write_optionset): Save the description
	also.
	(write_description): Routine to save description - only saves 1
	node of description.

	* filter-arg.c (filter_arg_edit_clicked): Dont free edata here,
	let the destroy do it(?)

	* filter-editor.c (main): Simple driver program for testing, so i
	can fix all this really broken code *sigh*

2000-05-15  NotZed  <NotZed@HelixCode.com>

	* filter-editor.c (filter_editor_set_rule_files): filename based
	interface.
	(filter_editor_save_rules): Interface to save the options to a
	filename.

	* filter-xml.[ch]: Bunch of cleanup.

	* filter-xml.c (filter_*_file): New interfaces to read/write files
	directly, rather than messing with xmldoc crap.

	* Makefile.am: Removed filter-driver test program, now just part
	of libfilter.

	* filter-driver.c: Made an object, with an api and everything, can
	apply a filter to a given mailbox.

2000-05-10  Christopher James Lahey  <clahey@helixcode.com>

	* filter-arg.h: Changed tree.h to gnome-xml/tree.h.

	* Makefile.am: Added filter-arg-types.h, filter-arg.h,
	filter-xml.h, filter-format.h, filter-druid.h, filter-editor.h.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.

2000-05-01  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (main): Fix for api.

2000-04-30  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (start): Remove no-longer-necessary call to
	camel_provider_register_as_module.

2000-04-25  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (INCLUDES): Use `$(GTKHTML_CFLAGS)'.
