@@ -1,3 +1,8 @@
+2000-05-18  Dan Winship  <danw@helixcode.com>
+
+	* filter-driver.c (filter_driver_run): update for
+	camel_folder_get_uids change
+
 2000-05-17  NotZed  <NotZed@HelixCode.com>
 
 	* filter-druid.c: Fix some html formatting.
